# launchd

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: calendar_interval.rs  error.rs  keep_alive.rs  lib.rs  load_session_type.rs  mach_services.rs  process_type.rs  resource_limits.rs  sockets.rs
tests/resources/: launchevents-1.plist  launchevents-2.plist
