[package]
name = "launchd"
version = "0.1.0"
authors = ["Koenichiwa <koenvwel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["xml"]

xml =["serde", "plist"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
plist = { version = "1", optional = true }