[package]
name = "launchd"
version = "0.3.0"
authors = ["Koen van Wel <koenvwel@gmail.com>"]
edition = "2018"
repository = "https://github.com/koenichiwa/launchd"
readme = "README.md"
description = "Rust library for creating and parsing launchd files"
keywords = ["launchd", "schedule", "repeat", "periodic", "macOS"]
categories = ["Configuration"]
license = "MIT"

[package.metadata.cargo-all-features]

[features]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
plist = "1.5"
cron = { version = "0.12", optional = true }
thiserror = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html